# icons-asset-generator

./: .gitignore  README.md  aws-icons.xml  pyproject.toml
diagrams_shapes_library/: __main__.py  arguments.py  general_config.py  processor.py
diagrams_shapes_library/common/: images_finder.py  size.py
diagrams_shapes_library/diagramsnet/: diagramsnet.py
diagrams_shapes_library/omnigraffle/: omnigraffle.py
diagrams_shapes_library/util/: logger.py
drawio_svg_icons/: __main__.py  encoding.py  logger.py  magnets.py  processor.py
icons_asset_generator/: __main__.py  arguments.py  processor.py
icons_asset_generator/common/: images_finder.py  name.py  size.py
icons_asset_generator/diagramsnet/: diagramsnet.py
icons_asset_generator/omnigraffle/: omnigraffle.py
icons_asset_generator/util/: encoding.py  io.py
