[tool.poetry]
name = "diagrams-shapes-library"
version = "0.1.0"
description = ""
authors = ["Maciej Radzikowski <maciej@radzikowski.com.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
diagrams-shapes-library = "diagrams_shapes_library.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
