[tool.poetry]
name = "icons-asset-generator"
version = "0.1.0"
description = "Tool to create OmniGraffle Stencils and diagrams.net libraries from SVG icons"
authors = ["Maciej Radzikowski <maciej@radzikowski.com.pl>"]
license = "MIT"
repository = "https://github.com/m-radzikowski/icons-asset-generator"

[tool.poetry.dependencies]
python = "^3.8"
CairoSVG = "2.5.2"
PyPDF2 = "1.27.11"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
icons-asset-generator = "icons_asset_generator.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
